--- a/SLBr/MainWindow.xaml
+++ b/SLBr/MainWindow.xaml
@@ -3,36 +3,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SLBr"
+        xmlns:local="clr-namespace:SLBr" xmlns:controls="clr-namespace:SLBr.Controls"
         mc:Ignorable="d"
         Title="SLBr" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" WindowState="Maximized" Height="450" Width="800" Closing="Window_Closing">
     <Window.Resources>
         <ResourceDictionary Source="StyleResourceDictionary.xaml"/>
     </Window.Resources>
     <Grid Background="{DynamicResource PrimaryBrush}">
-        <TabControl BorderThickness="0,1,0,0" BorderBrush="{DynamicResource BorderBrush}" x:Name="BrowserTabs" Padding="0">
-            <!--<TabControl.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Width="80" Text="{Binding Header}"/>
-                        <TextBlock Text="X" Width="20" Height="20"/>
-                    </StackPanel>
-                </DataTemplate>
-            </TabControl.ItemTemplate>-->
+        <controls:TabControlEx BorderThickness="0,1,0,0" BorderBrush="{DynamicResource BorderBrush}" x:Name="BrowserTabs" Padding="0">
             <TabControl.ContentTemplate>
                 <DataTemplate>
                     <UserControl Content="{Binding Content}" Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                 </DataTemplate>
             </TabControl.ContentTemplate>
-        </TabControl>
-        <!--<Border Grid.Row="1" Grid.ColumnSpan="2" Visibility="Visible" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="0,1,0,0" x:Name="DownloadContainer" Height="33" Margin="0,363,0,-33" Grid.RowSpan="3">
-            <ItemsControl x:Name="DownloadPanel">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <DockPanel Margin="5" HorizontalAlignment="Left"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-            </ItemsControl>
-        </Border>-->
+        </controls:TabControlEx>
     </Grid>
 </Window>
