--- a/SLBr/Pages/Browser.xaml
+++ b/SLBr/Pages/Browser.xaml
@@ -2,9 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:controls="clr-namespace:SLBr.Controls"
              mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800"
-             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontFamily="Segoe MDL2 Assets"><!--xmlns:asf="clr-namespace:AirspaceFixer;assembly=AirspaceFixer"-->
+             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontFamily="Segoe MDL2 Assets">
     <UserControl.Resources>
         <ResourceDictionary Source="../StyleResourceDictionary.xaml"/>
     </UserControl.Resources>
@@ -27,9 +27,25 @@
                         <MenuItem ToolTip="More options" Header="&#xE700;" Height="23" Margin="0,2" Foreground="{DynamicResource ControlFontBrush}" BorderThickness="0">
                             <MenuItem Header="New Tab" FontFamily="Arial" Click="ButtonAction" Tag="4"/>
                             <Separator/>
-                            <MenuItem x:Name="HistoryListMenuItem" Header="History" FontFamily="Arial"/>
-                            <MenuItem x:Name="DownloadListMenuItem" Header="Downloads" FontFamily="Arial"/>
-                            <MenuItem x:Name="FavouriteListMenuItem" Header="Favourites" FontFamily="Arial">
+                            <MenuItem x:Name="HistoryListMenu" Header="History" FontFamily="Arial">
+                                <MenuItem.ItemContainerStyle>
+                                    <Style TargetType="MenuItem">
+                                        <Setter Property="Header" Value="{Binding Name}"/>
+                                        <Setter Property="Tag" Value="{Binding Arguments}"/>
+                                        <EventSetter Event="Click" Handler="ButtonAction"/>
+                                    </Style>
+                                </MenuItem.ItemContainerStyle>
+                            </MenuItem>
+                            <MenuItem x:Name="DownloadListMenu" Header="Downloads" FontFamily="Arial">
+                                <MenuItem.ItemContainerStyle>
+                                    <Style TargetType="MenuItem">
+                                        <Setter Property="Header" Value="{Binding Name}"/>
+                                        <Setter Property="Tag" Value="{Binding Arguments}"/>
+                                        <EventSetter Event="Click" Handler="ButtonAction"/>
+                                    </Style>
+                                </MenuItem.ItemContainerStyle>
+                            </MenuItem>
+                            <MenuItem x:Name="FavouriteListMenu" Header="Favourites" FontFamily="Arial">
                                 <MenuItem.ItemContainerStyle>
                                     <Style TargetType="MenuItem">
                                         <Setter Property="Header" Value="{Binding Name}"/>
@@ -46,6 +62,7 @@
                                     <MenuItem Header="WebRTC Experiments" FontFamily="Arial" Click="ButtonAction" Tag="3&lt;,&gt;https://www.webrtc-experiment.com/"/>
                                     <MenuItem Header="Web Speech API Demonstration" FontFamily="Arial" Click="ButtonAction" Tag="3&lt;,&gt;https://www.google.com/intl/en/chrome/demos/speech.html"/>
                                     <MenuItem Header="Web Notifications Test" FontFamily="Arial" Click="ButtonAction" Tag="3&lt;,&gt;https://www.bennish.net/web-notifications.html"/>
+                                    <MenuItem Header="WebAssembly Roadmap" FontFamily="Arial" Click="ButtonAction" Tag="3&lt;,&gt;https://webassembly.org/roadmap/"/>
                                 </MenuItem>
                             </MenuItem>
                             <Separator/>
@@ -63,14 +80,14 @@
                             <ToolTip x:Name="SSLToolTip"/>
                         </Grid.ToolTip>
                     </Grid>
-                    <DockPanel DockPanel.Dock="Right" Margin="0">
-                        <!--<Border x:Name="YoutubeDownloadButton" CornerRadius="25" Tag="12&lt;,&gt;https://ytmp3.cc/{CurrentUrl}" ToolTip="Download Video" Background="{DynamicResource BorderBrush}" Margin="5,0,0,0" Height="23" Width="23">
+                    <!--<DockPanel DockPanel.Dock="Right" Margin="0">
+                        <Border x:Name="YoutubeDownloadButton" CornerRadius="25" Tag="12&lt;,&gt;https://ytmp3.cc/{CurrentUrl}" ToolTip="Download Video" Background="{DynamicResource BorderBrush}" Margin="5,0,0,0" Height="23" Width="23">
                             <TextBlock TextAlignment="Center" VerticalAlignment="Center" Text="&#xE896;" Foreground="Red"/>
                         </Border>
                         <Border CornerRadius="25" Tag="12&lt;,&gt;slbr://tetris" ToolTip="Play Tetris" Background="{DynamicResource BorderBrush}" Margin="5,0,0,0" Height="23" Width="23">
                             <TextBlock TextAlignment="Center" VerticalAlignment="Center" Text="&#xE809;" Foreground="{DynamicResource ControlFontBrush}"/>
-                        </Border>-->
-                        <!--<Border CornerRadius="25" Tag="12&lt;,&gt;https://www.unicef.ie/donate/ukraine/#1" MouseDown="MiddleButtonAction" ToolTip="Donate to Ukraine"  Background="{DynamicResource BorderBrush}" x:Name="UkraineWar" Visibility="Visible" Margin="5,0,0,0" Height="23" Width="23">
+                        </Border>
+                        <Border CornerRadius="25" Tag="12&lt;,&gt;https://www.unicef.ie/donate/ukraine/#1" ToolTip="Donate to Ukraine"  Background="{DynamicResource BorderBrush}" x:Name="UkraineWar" Visibility="Visible" Margin="5,0,0,0" Height="23" Width="23">
                             <Border Margin="5" CornerRadius="25">
                                 <Grid>
                                     <Grid.RowDefinitions>
@@ -81,19 +98,27 @@
                                     <Border Grid.Row="1" Background="#FFD600" CornerRadius="0,0,25,25"/>
                                 </Grid>
                             </Border>
-                        </Border>-->
-                    </DockPanel>
+                        </Border>
+                    </DockPanel>-->
+                    <!--<Button DockPanel.Dock="Right" FontSize="13" Margin="5,0,0,0" Height="23" Width="23" ToolTip="Extensions" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xEA86;" Foreground="{DynamicResource ControlFontBrush}"/>-->
                     <TextBox KeyDown="FindTextBox_KeyDown" DockPanel.Dock="Right" x:Name="FindTextBox" Margin="5,0,0,0" Height="23" Width="200" FontFamily="arial" Padding="0,1,0,0" ToolTip="Find a specific text in this page"/>
 
                     <!--<Button DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Reader mode" x:Name="ReaderModeButton" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xE736;" Foreground="{DynamicResource ControlFontBrush}"/>-->
                     <Button x:Name="SwitchBrowserButton" Click="ButtonAction" Tag="11&lt;,&gt;IE" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Internet Explorer Mode" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Foreground="{DynamicResource ControlFontBrush}">
                         <Grid Height="12.5" Width="12.5">
-                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="12" Foreground="{DynamicResource ControlFontBrush}">&#xEA0D;</TextBlock>
-                            <Border Height="7.5" Width="7.5" VerticalAlignment="Bottom" HorizontalAlignment="Right" Background="{DynamicResource PrimaryBrush}">
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="12" Foreground="{DynamicResource ControlFontBrush}">&#xE737;</TextBlock>
+                            <Border Height="7.5" Width="7.5" Margin="0,0.5,0,0" VerticalAlignment="Center" HorizontalAlignment="Center" Background="Transparent">
                                 <TextBlock x:Name="SwitchBrowserText" FontFamily="Ariel" Foreground="CornflowerBlue" FontSize="10" VerticalAlignment="Center" HorizontalAlignment="Center">e</TextBlock>
                             </Border>
                         </Grid>
-                    </Button><Button Click="ButtonAction" Tag="10" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Unload tabs" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Foreground="{DynamicResource ControlFontBrush}">
+                    </Button>
+                    <!--<Button Click="ButtonAction" Tag="11&lt;,&gt;IE" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Internet Explorer Mode" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Foreground="{DynamicResource ControlFontBrush}">
+                        <Grid Height="12.5" Width="12.5">
+                            <controls:RadialProgressBar x:Name="_ProgressBar" HorizontalAlignment="Center" VerticalAlignment="Center"
+              Percentage="70" SegmentColor="#026873" StrokeThickness="1"/>
+                        </Grid>
+                    </Button>-->
+                    <Button Click="ButtonAction" Tag="10" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Unload tabs" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Foreground="{DynamicResource ControlFontBrush}">
                         <Grid Height="12.5" Width="12.5">
                             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="12" Foreground="{DynamicResource ControlFontBrush}">&#xE727;</TextBlock>
                             <TextBlock Background="{DynamicResource PrimaryBrush}" VerticalAlignment="Bottom" Foreground="{DynamicResource ControlFontBrush}" HorizontalAlignment="Right" FontSize="7.5">&#xE74D;</TextBlock>
@@ -101,9 +126,22 @@
                     </Button>
                     <!--<Button Click="ButtonAction" Tag="8" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Collect garbage" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xEA99;" Foreground="{DynamicResource ControlFontBrush}"/>-->
                     <Button Click="ButtonAction" Tag="8" x:Name="MuteAudioButton" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Mute audio" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xE767;" Foreground="{DynamicResource ControlFontBrush}"/>
-                    <Button Click="ButtonAction" Tag="3&lt;,&gt;https://translate.google.com/translate?sl=auto&amp;tl=en&amp;hl=en&amp;u={CurrentUrl}" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Translate to English" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xE8C1;" Foreground="{DynamicResource ControlFontBrush}"/><!--F2B7-->
+                    <Button Click="ButtonAction" Tag="13&lt;,&gt;{CurrentUrl}" x:Name="QRCodeButton" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Create QR Code" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xED14;" Foreground="{DynamicResource ControlFontBrush}"/>
+                    <Button Click="ButtonAction" Tag="12&lt;,&gt;{CurrentUrl}" Foreground="NavajoWhite" x:Name="OpenFileExplorerButton" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Open in File Explorer" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xEC50;"></Button>
+                    <Button Click="ButtonAction" Tag="3&lt;,&gt;https://translate.google.com/translate?sl=auto&amp;tl=en&amp;hl=en&amp;u={CurrentUrl}" x:Name="TranslateButton" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Translate to English" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xE8C1;" Foreground="{DynamicResource ControlFontBrush}"/><!--F2B7-->
                     <Button Click="ButtonAction" Tag="7" DockPanel.Dock="Right" Margin="0" Height="23" Width="23" ToolTip="Add to favourites" x:Name="FavouriteButton" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xEB51;" Foreground="{DynamicResource ControlFontBrush}"/>
-                    <TextBox Tag="Loading" KeyDown="AddressBox_KeyDown" GotFocus="AddressBox_GotFocus" LostFocus="AddressBox_LostFocus" MouseEnter="AddressBox_MouseEnter" MouseLeave="AddressBox_MouseLeave" x:Name="AddressBox" Margin="5,0" Height="23" Width="auto" FontFamily="arial" Padding="0"/>
+                    <Grid Width="auto" Margin="5,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <TextBox FontFamily="None" Tag="Loading" PreviewKeyDown="AddressBox_PreviewKeyDown" GotFocus="AddressBox_GotFocus" LostFocus="AddressBox_LostFocus" MouseEnter="AddressBox_MouseEnter" MouseLeave="AddressBox_MouseLeave" x:Name="AddressBox" Height="23" Padding="0"/>
+                        <TextBlock x:Name="AddressBoxPlaceholder" IsHitTestVisible="False" Focusable="False" Margin="8,0" FontFamily="None" VerticalAlignment="Center">
+                            <TextBlock.Foreground>
+                                <SolidColorBrush Color="Gray" Opacity=".75"/>
+                            </TextBlock.Foreground>
+                        </TextBlock>
+                    </Grid>
                 </DockPanel>
                 <Border BorderBrush="{DynamicResource BorderBrush}" BorderThickness="0" x:Name="FavouriteContainer" Height="33" Grid.Row="1" HorizontalAlignment="Stretch">
                     <ScrollViewer FontFamily="None" x:Name="FavouriteScrollViewer" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Hidden" PreviewMouseWheel="FavouriteScrollViewer_PreviewMouseWheel">
@@ -115,7 +153,9 @@
                             </ItemsControl.ItemsPanel>
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <Button Padding="10,0" ToolTip="{Binding Tooltip}" Content="{Binding Name}" Margin="2.5,0" Click="ButtonAction" Tag="{Binding Arguments}" Height="23"/>
+                                    <Button MaxWidth="200" Padding="10,0" ToolTip="{Binding Tooltip}" Margin="2.5,0" Click="ButtonAction" Tag="{Binding Arguments}" Height="23">
+                                        <TextBlock Text="{Binding Name}" MaxWidth="175" TextTrimming="CharacterEllipsis"/>
+                                    </Button>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
@@ -131,10 +171,22 @@
                 <ColumnDefinition/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Grid x:Name="CoreContainer"/>
-            <Grid x:Name="InspectorContainer" Visibility="Collapsed" Width="500" Grid.Column="1"/>
-            <Border Visibility="Collapsed" x:Name="StatusBar" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="1" Height="25" Width="400" Background="{DynamicResource UnselectedTabBrush}" CornerRadius="0,5,0,0">
-                <TextBlock x:Name="StatusMessage" Margin="5" FontFamily="None" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" Foreground="{DynamicResource FontBrush}"/>
+
+            <Grid x:Name="CoreContainer" Margin="0,0,0,0"/>
+            <Grid x:Name="InspectorContainer" Visibility="Collapsed" Width="600" Grid.Column="1"/>
+
+            <Popup x:Name="QRCodePopup" Focusable="False" AllowsTransparency="True" Placement="Center" Width="250" Height="250" IsOpen="False">
+                <Border Visibility="Visible" Background="{DynamicResource UnselectedTabBrush}" CornerRadius="5">
+                    <Image RenderOptions.BitmapScalingMode="LowQuality" x:Name="QRCodeImage" Margin="15"/>
+                </Border>
+            </Popup>
+
+            <Border Margin="350,0,0,0" x:Name="StatusBar" Visibility="Visible" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Grid.Row="1" Height="25" Width="Auto" Background="{DynamicResource UnselectedTabBrush}">
+                <Popup x:Name="StatusBarPopup" Focusable="False" AllowsTransparency="True" Placement="RelativePoint" Width="350" Height="25" IsOpen="False">
+                    <Border Visibility="Visible" Background="{DynamicResource PrimaryBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="0,1,1,0" CornerRadius="0,5,0,0">
+                        <TextBlock x:Name="StatusMessage" Margin="5" FontFamily="None" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" Foreground="{DynamicResource FontBrush}"/>
+                    </Border>
+                </Popup>
             </Border>
         </Grid>
     </Grid>
